# cory_dot_tech

./: .gitignore  README.md  config.py  pyproject.toml  run.py
app/: __init__.py  models.py
app/frontend/: input.css  package-lock.json  package.json  tailwind.config.js
app/main/: routes.py
app/static/css/: styles.css
app/templates/: base.html
app/templates/main/: index.html
migrations/: env.py
migrations/versions/: 1f3defc9165a_initial_migration_workexperience.py  8c8dd860c49f_add_contactsubmission_model.py  fb866bb4a010_add_project_model.py
